Fix missing border in members page

--- a/app/pages/members/members.scss
+++ b/app/pages/members/members.scss
@@ -1,6 +1,6 @@
 .members {
   ion-item {
-    border-color: color($colors, decent);
+    border: 1px solid color($colors, decent);
 
     .item-inner {
       border: 0;
